Flytter DTO for innsyn v2 over til selvbetening felles (#1280)